--- a/old/index.html
+++ b/old/index.html
@@ -1,144 +1,441 @@
 <!DOCTYPE html>
-<html>
-<title>Om Thakkar - Resume</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
-</style>
-<body class="w3-light-grey">
+<!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
+<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
 
-<!-- Page Container -->
-<div class="w3-content w3-margin-top" style="max-width:1400px;">
+<head>
+	<meta charset="utf-8">
+	<title>Om Thakkar - Personal Resume</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link rel="stylesheet" href="css/base.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="icon" type="image/png" href="favicon.png">
+</head>
 
-  <!-- The Grid -->
-  <div class="w3-row-padding">
+<body id="top">
 
-    <!-- Left Column -->
-    <div class="w3-third">
+	<!-- header 
+   ================================================== -->
+	<header>
+		<div class="row">
 
-      <div class="w3-white w3-text-grey w3-card-4">
-        <div class="w3-display-container">
-          <img src="images/avatar.jpg" style="width:100%" alt="Avatar">
-          <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2 style="color:#fff;">Om Thakkar</h2>
-          </div>
-        </div>
-        <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Graphic Designer</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Thane, India</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>om.t@somaiya.edu</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91-75065-76388</p>
-          <hr>
+			<div class="top-bar">
+				<a class="menu-toggle" href="#"><span>Menu</span></a>
 
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
-          <p>Adobe Photoshop</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
-          </div>
-          <p>Photography</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
-              <div class="w3-center w3-text-white">80%</div>
-            </div>
-          </div>
-          <p>Illustrator</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
-          </div>
-          <p>Programming</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
-          </div>
-          <br>
+				<div class="logo">
+					<a href="index.html">Menu</a>
+				</div>
 
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
-          <p>English</p>
-          <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
-          </div>
-          <p>Hindi</p>
-          <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
-          </div>
-          <p>Gujarati</p>
-          <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:25%"></div>
-          </div>
-          <br>
-        </div>
-      </div><br>
+				<nav id="main-nav-wrap">
+					<ul class="main-navigation">
+						<li class="current"><a class="smoothscroll" href="#intro" title="">Home</a></li>
+						<li><a class="smoothscroll" href="#about" title="">About</a></li>
+						<li><a class="smoothscroll" href="#resume" title="">Resume</a></li>
+						<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
+					</ul>
+				</nav>
+			</div> <!-- /top-bar -->
 
-    <!-- End Left Column -->
-    </div>
+		</div> <!-- /row -->
+	</header> <!-- /header -->
 
-    <!-- Right Column -->
-    <div class="w3-twothird">
+	<!-- intro section
+   ================================================== -->
+	<section id="intro">
 
-      <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Fresher</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p></p>
-          <hr>
-        </div>
-<!--        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Web Developer / something.com</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
-          <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Graphic Designer / designsomething.com</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
-        </div>
--->      </div>
+		<div class="intro-overlay"></div>
 
-      <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>S. K. Somaiya College Of Arts, Science And Commerce</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017-2020</h6>
-          <p>Bachelor Of Science In Information Technology (B.Sc. I.T.)</p>
-          <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>K. J. Somaiya College Of Arts And Commerce</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015-2017</h6>
-          <p>Higher Secondary College</p>
-          <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>B. S. M's English Medium School</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2004-2015</h6>
-          <p>Secondary School</p><br>
-        </div>
-      </div>
+		<div class="intro-content">
+			<div class="row">
 
-    <!-- End Right Column -->
-    </div>
+				<div class="col-twelve">
 
-  <!-- End Grid -->
-  </div>
+					<h5>Hello, World!</h5>
+					<h1>I'm Om Thakkar.</h1>
 
-  <!-- End Page Container -->
-</div>
+					<p class="intro-position">
+						<span>Student</span>
+						<span>Graphic Designer</span>
+						<span>Coder</span>
+					</p>
 
-<footer class="w3-container w3-teal w3-center w3-margin-top">
-  <p>Find me on social media.</p>
-  <a href="https://www.facebook.com/om.thakkar87"><i class="fa fa-facebook-official w3-hover-opacity" style="font-size:25px;">&nbsp&nbsp</i></a>
-  <a href="https://www.instagram.com/om.thakkar123/"><i class="fa fa-instagram w3-hover-opacity" style="font-size:25px;">&nbsp&nbsp</i></a>
-  <a href="https://www.snapchat.com/add/omthakkar87"><i class="fa fa-snapchat w3-hover-opacity" style="font-size:25px;">&nbsp&nbsp</i></a>
-  <a href="https://in.pinterest.com/omthakkar123/"><i class="fa fa-pinterest-p w3-hover-opacity" style="font-size:25px;">&nbsp&nbsp</i></a>
-  <a href="https://twitter.com/om_thakkar123"><i class="fa fa-twitter w3-hover-opacity" style="font-size:25px;">&nbsp&nbsp</i></a>
-  <a href="www.linkedin.com/in/omthakkar123"><i class="fa fa-linkedin w3-hover-opacity" style="font-size:25px;">&nbsp&nbsp</i></a>
- <p> <br> </p>
-</footer>
+					<a class="button stroke smoothscroll" href="#about" title="">More About Me
+					</a>
 
+				</div>
+
+			</div>
+		</div> <!-- /intro-content -->
+
+		<ul class="intro-social">
+			<li><a href="https://www.facebook.com/om.thakkar87"><i class="fab fa-facebook-f"></i></a></li>
+			<li><a href="https://www.twitter.com/om_thakkar123"><i class="fab fa-twitter"></i></a></li>
+			<li><a href="https://www.instagram.com/om.thakkar123"><i class="fab fa-instagram"></i></a></li>
+		</ul> <!-- /intro-social -->
+
+	</section> <!-- /intro -->
+
+
+	<!-- about section
+   ================================================== -->
+	<section id="about">
+
+		<div class="row section-intro">
+			<div class="col-twelve">
+
+				<h5>About</h5>
+				<h1>Let me introduce myself.</h1>
+
+				<div class="intro-info">
+
+					<img src="images/profile-pic.jpg" alt="Profile Picture">
+
+					<p class="lead">Hello, World! I'm a college student & A Freelance Graphic designer, with some web development skills 😉.</p>
+				</div>
+
+			</div>
+		</div> <!-- /section-intro -->
+
+		<div class="row about-content">
+
+			<div class="col-six tab-full">
+
+				<h3>Profile</h3>
+
+				<ul class="info-list">
+					<li>
+						<strong>Full Name:</strong>
+						<span>Om M. Thakkar</span>
+					</li>
+					<li>
+						<strong>Birth Date:</strong>
+						<span>8<sup>th</sup> July, 1999</span>
+					</li>
+					<li>
+						<strong>Currently Working As:</strong>
+						<span>Freelancer Graphic Designer & Student</span>
+					</li>
+					<li>
+						<strong>Website:</strong>
+						<span>www.omthakkar.cf</span>
+					</li>
+					<li>
+						<strong>Email:</strong>
+						<span>om.t@somaiya.edu</span>
+					</li>
+
+				</ul> <!-- /info-list -->
+
+			</div>
+
+			<div class="col-six tab-full">
+
+				<h3>Skills</h3>
+
+				<ul class="skill-bars">
+					<li>
+						<div class="progress percent90"><span>90%</span></div>
+						<strong>Photoshop</strong>
+					</li>
+					<li>
+						<div class="progress percent85"><span>85%</span></div>
+						<strong>Illustrator</strong>
+					</li>
+					<li>
+						<div class="progress percent70"><span>70%</span></div>
+						<strong>HTML5 + CSS3</strong>
+					</li>
+					<li>
+						<div class="progress percent75"><span>75%</span></div>
+						<strong>Javascript</strong>
+					</li>
+					<li>
+
+						<div class="progress percent95"><span>95%</span></div>
+						<strong>C & C++</strong>
+					</li>
+
+				</ul> <!-- /skill-bars -->
+
+			</div>
+
+		</div>
+
+		<div class="row button-section">
+			<div class="col-twelve">
+				<a href="#contact" title="Contact Me" class="button stroke smoothscroll">Contact Me</a>
+				<a href="./docs/Om Thakkar Resume.pdf" title="Download CV" class="button button-primary">Download CV</a>
+			</div>
+		</div>
+
+	</section> <!-- /process-->
+
+
+	<!-- resume Section
+   ================================================== -->
+	<section id="resume" class="grey-section">
+
+		<div class="row section-intro">
+			<div class="col-twelve">
+
+				<h5>Resume</h5>
+				<h1>More of my credentials.</h1>
+
+			</div>
+		</div> <!-- /section-intro-->
+
+		<div class="row resume-timeline">
+
+			<div class="col-twelve resume-header">
+
+				<h2>Work Experience</h2>
+
+			</div> <!-- /resume-header -->
+
+			<div class="col-twelve">
+
+				<div class="timeline-wrap">
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-graduation-cap"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Freelance Graphic Designer</h3>
+							<p>July 2015 - Present</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+				</div> <!-- /timeline-wrap -->
+
+			</div> <!-- /col-twelve -->
+
+		</div> <!-- /resume-timeline -->
+
+		<div class="row resume-timeline">
+
+			<div class="col-twelve resume-header">
+
+				<h2>Education</h2>
+
+			</div> <!-- /resume-header -->
+
+			<div class="col-twelve">
+
+				<div class="timeline-wrap">
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-briefcase"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Bachelors Degree</h3>
+							<p>June 2017 - Present</p>
+						</div>
+
+						<div class="timeline-content">
+							<h4>Mumbai University</h4>
+							<p>S. K. Somaiya College Of Arts, Science And Commerce</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-briefcase"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Junior College</h3>
+							<p>June 2015 - March 2017</p>
+						</div>
+
+						<div class="timeline-content">
+							<h4>Maharashtra State Board</h4>
+							<p>K. J. Somaiya Junior College Of Arts & Commerce</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-briefcase"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>School</h3>
+							<p>July 2004 - March 2015</p>
+						</div>
+
+						<div class="timeline-content">
+							<h4>Maharashtra State Board</h4>
+							<p>B. S. M's English Medium School</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+				</div> <!-- /timeline-wrap -->
+
+			</div> <!-- /col-twelve -->
+
+		</div> <!-- /resume-timeline -->
+
+	</section> <!-- /features -->
+
+
+	<!-- contact
+   ================================================== -->
+	<section id="contact">
+
+		<div class="row section-intro">
+			<div class="col-twelve">
+
+				<h5>Contact</h5>
+				<h1>I'd Love To Hear From You.</h1>
+
+			</div>
+		</div> <!-- /section-intro -->
+
+		<div class="row contact-form">
+
+			<div class="col-twelve">
+
+				<!-- form -->
+				<form name="contactForm" id="contactForm" method="post" action="">
+					<fieldset>
+
+						<div class="form-field">
+							<input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
+						</div>
+						<div class="form-field">
+							<input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
+						</div>
+						<div class="form-field">
+							<input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
+						</div>
+						<div class="form-field">
+							<textarea name="contactMessage" id="contactMessage" placeholder="message" rows="2" cols="50" required=""></textarea>
+						</div>
+						<div class="form-field">
+							<button class="submitform">Submit</button>
+							<div id="submit-loader">
+								<div class="text-loader">Sending...</div>
+								<div class="s-loader">
+									<div class="bounce1"></div>
+									<div class="bounce2"></div>
+									<div class="bounce3"></div>
+								</div>
+							</div>
+						</div>
+
+					</fieldset>
+				</form> <!-- Form End -->
+
+				<!-- contact-warning -->
+				<div id="message-warning">
+				</div>
+				<!-- contact-success -->
+				<div id="message-success">
+					<i class="fa fa-check"></i>Your message was sent, thank you!<br>
+				</div>
+
+			</div> <!-- /col-twelve -->
+
+		</div> <!-- /contact-form -->
+
+		<div class="row contact-info">
+
+			<div class="col-four tab-full">
+
+				<div class="icon">
+					<i class="fas fa-map-marker-alt"></i>
+				</div>
+
+				<h5>Where to find me</h5>
+
+				<p>
+					3/16 Sahyog Niwas, <br>
+					Hans Nagar, Khopat, <br>
+					Thane (West) - 400601
+				</p>
+
+			</div>
+
+			<div class="col-four tab-full collapse">
+
+				<div class="icon">
+					<i class="fas fa-envelope"></i>
+				</div>
+
+				<h5>Email Me At</h5>
+
+				<p>om.t@somaiya.edu
+				</p>
+
+			</div>
+
+			<div class="col-four tab-full">
+
+				<div class="icon">
+					<i class="fas fa-phone fa-flip-horizontal"></i>
+				</div>
+
+				<h5>Call Me At</h5>
+
+				<p>Phone: +91-75065-76388
+				</p>
+
+			</div>
+
+		</div> <!-- /contact-info -->
+
+	</section> <!-- /contact -->
+
+
+	<!-- footer
+   ================================================== -->
+
+	<footer>
+		<div class="row">
+
+			<div class="col-six tab-full pull-right social">
+
+				<ul class="footer-social">
+					<li><a href="https://www.facebook.com/om.thakkar87"><i class="fab fa-facebook-f"></i></a></li>
+					<li><a href="https://www.twitter.com/om_thakkar123"><i class="fab fa-twitter"></i></a></li>
+					<li><a href="https://www.instagram.com/om.thakkar123"><i class="fab fa-instagram"></i></a></li>
+				</ul>
+			</div>
+
+			<div class="col-six tab-full">
+
+				<div id="go-top">
+					<a class="smoothscroll" title="Back to Top" href="#top"><i class="fas fa-arrow-circle-up"></i></a>
+				</div>
+
+			</div> <!-- /row -->
+	</footer>
+
+	<div id="preloader">
+		<div id="loader"></div>
+	</div>
+
+	<!-- Java Script
+   ================================================== -->
+	<script src="js/jquery-2.1.3.min.js"></script>
+	<script src="js/plugins.js"></script>
+	<script src="js/main.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-analytics.js"></script>
 </body>
+
 </html>
