--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 		<div class="container">
 
 			<nav class="navbar navbar-expand-lg navbar-dark">
-				<a class="navbar-brand" href=""><img src="images/white.png" width="70px" alt="Om Creations" /></a> <button
-					aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
+				<a class="navbar-brand" href=""><img src="images/white.png" width="70px" alt="Om Creations" /></a>
+				<button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
 					class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span
 						class="navbar-toggler-icon"></span></button>
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -70,7 +70,6 @@
 						<li class="nav-item"><a href="#about" class="nav-link">About</a></li>
 						<!-- <li class="nav-item"><a href="#services" class="nav-link">Services</a></li> -->
 						<li class="nav-item"><a href="#experience" class="nav-link">Experience</a></li>
-						<!-- <li class="nav-item"><a href="#works" class="nav-link">Works</a></li> -->
 						<!-- <li class="nav-item"><a href="#blog" class="nav-link">Blog</a></li> -->
 						<li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
 					</ul>
@@ -100,11 +99,16 @@
 
 					<!-- social icons -->
 					<ul class="social-icons light list-inline mb-0 mt-4">
-						<li class="list-inline-item"><a href="https://www.instagram.com/omthakkar87"><i class="fab fa-instagram"></i></a></li>
-						<li class="list-inline-item"><a href="https://www.twitter.com/omthakkar87"><i class="fab fa-twitter"></i></a></li>
-						<li class="list-inline-item"><a href="https://www.facebook.com/omthakkar87"><i class="fab fa-facebook-f"></i></a></li>
-						<li class="list-inline-item"><a href="https://www.youtube.com/c/omthakkar123"><i class="fab fa-youtube"></i></a></li>
-						<li class="list-inline-item"><a href="https://www.linkedin.com/in/omthakkar87/"><i class="fab fa-linkedin-in"></i></a></li>
+						<li class="list-inline-item"><a href="https://www.instagram.com/omthakkar87"><i
+									class="fab fa-instagram"></i></a></li>
+						<li class="list-inline-item"><a href="https://www.twitter.com/omthakkar87"><i
+									class="fab fa-x-twitter"></i></a></li>
+						<li class="list-inline-item"><a href="https://www.facebook.com/omthakkar87"><i
+									class="fab fa-facebook-f"></i></a></li>
+						<li class="list-inline-item"><a href="https://www.youtube.com/c/omthakkar123"><i
+									class="fab fa-youtube"></i></a></li>
+						<li class="list-inline-item"><a href="https://www.linkedin.com/in/omthakkar87/"><i
+									class="fab fa-linkedin-in"></i></a></li>
 					</ul>
 
 					<!-- buttons -->
@@ -129,24 +133,29 @@
 					<svg width="27" height="29" data-depth="0.3" class="layer p1" xmlns="http://www.w3.org/2000/svg">
 						<path
 							d="M21.15625.60099c4.37954 3.67487 6.46544 9.40612 5.47254 15.03526-.9929 5.62915-4.91339 10.30141-10.2846 12.25672-5.37122 1.9553-11.3776.89631-15.75715-2.77856l2.05692-2.45134c3.50315 2.93948 8.3087 3.78663 12.60572 2.22284 4.297-1.5638 7.43381-5.30209 8.22768-9.80537.79387-4.50328-.8749-9.08872-4.37803-12.02821L21.15625.60099z"
-							fill="#FFD15C" fill-rule="evenodd" /></svg>
+							fill="#FFD15C" fill-rule="evenodd" />
+					</svg>
 
 					<svg width="26" height="26" data-depth="0.2" class="layer p2" xmlns="http://www.w3.org/2000/svg">
 						<path d="M13 3.3541L2.42705 24.5h21.1459L13 3.3541z" stroke="#FF4C60" stroke-width="3"
-							fill="none" fill-rule="evenodd" /></svg>
+							fill="none" fill-rule="evenodd" />
+					</svg>
 
 					<svg width="30" height="25" data-depth="0.3" class="layer p3" xmlns="http://www.w3.org/2000/svg">
 						<path
 							d="M.1436 8.9282C3.00213 3.97706 8.2841.92763 14.00013.92796c5.71605.00032 10.9981 3.04992 13.85641 8 2.8583 4.95007 2.8584 11.0491-.00014 16.00024l-2.77128-1.6c2.28651-3.96036 2.28631-8.84002.00011-12.8002-2.2862-3.96017-6.5124-6.40017-11.08513-6.4-4.57271.00018-8.79872 2.43984-11.08524 6.4002l-2.77128-1.6z"
-							fill="#44D7B6" fill-rule="evenodd" /></svg>
+							fill="#44D7B6" fill-rule="evenodd" />
+					</svg>
 
 					<svg width="15" height="23" data-depth="0.6" class="layer p4" xmlns="http://www.w3.org/2000/svg">
 						<rect transform="rotate(30 9.86603 10.13397)" x="7" width="3" height="25" rx="1.5"
-							fill="#FFD15C" fill-rule="evenodd" /></svg>
+							fill="#FFD15C" fill-rule="evenodd" />
+					</svg>
 
 					<svg width="15" height="23" data-depth="0.2" class="layer p5" xmlns="http://www.w3.org/2000/svg">
 						<rect transform="rotate(30 9.86603 10.13397)" x="7" width="3" height="25" rx="1.5"
-							fill="#6C6CE5" fill-rule="evenodd" /></svg>
+							fill="#6C6CE5" fill-rule="evenodd" />
+					</svg>
 
 					<svg width="49" height="17" data-depth="0.5" class="layer p6" xmlns="http://www.w3.org/2000/svg">
 						<g fill="#FF4C60" fill-rule="evenodd">
@@ -159,16 +168,19 @@
 
 					<svg width="26" height="26" data-depth="0.4" class="layer p7" xmlns="http://www.w3.org/2000/svg">
 						<path d="M13 22.6459L2.42705 1.5h21.1459L13 22.6459z" stroke="#FFD15C" stroke-width="3"
-							fill="none" fill-rule="evenodd" /></svg>
+							fill="none" fill-rule="evenodd" />
+					</svg>
 
 					<svg width="19" height="21" data-depth="0.3" class="layer p8" xmlns="http://www.w3.org/2000/svg">
 						<rect transform="rotate(-40 6.25252 10.12626)" x="7" width="3" height="25" rx="1.5"
-							fill="#6C6CE5" fill-rule="evenodd" /></svg>
+							fill="#6C6CE5" fill-rule="evenodd" />
+					</svg>
 
 					<svg width="30" height="25" data-depth="0.3" class="layer p9" xmlns="http://www.w3.org/2000/svg">
 						<path
 							d="M29.8564 16.0718c-2.85854 4.95114-8.1405 8.00057-13.85654 8.00024-5.71605-.00032-10.9981-3.04992-13.85641-8-2.8583-4.95007-2.8584-11.0491.00014-16.00024l2.77128 1.6c-2.28651 3.96036-2.28631 8.84002-.00011 12.8002 2.2862 3.96017 6.5124 6.40017 11.08513 6.4 4.57271-.00018 8.79872-2.43984 11.08524-6.4002l2.77128 1.6z"
-							fill="#6C6CE5" fill-rule="evenodd" /></svg>
+							fill="#6C6CE5" fill-rule="evenodd" />
+					</svg>
 
 					<svg width="47" height="29" data-depth="0.2" class="layer p10" xmlns="http://www.w3.org/2000/svg">
 						<g fill="#44D7B6" fill-rule="evenodd">
@@ -182,7 +194,8 @@
 					<svg width="33" height="20" data-depth="0.5" class="layer p11" xmlns="http://www.w3.org/2000/svg">
 						<path
 							d="M32.36774.34317c.99276 5.63023-1.09332 11.3614-5.47227 15.03536-4.37895 3.67396-10.3855 4.73307-15.75693 2.77837C5.76711 16.2022 1.84665 11.53014.8539 5.8999l3.15139-.55567c.7941 4.50356 3.93083 8.24147 8.22772 9.8056 4.29688 1.56413 9.10275.71673 12.60554-2.2227C28.34133 9.98771 30.01045 5.4024 29.21635.89884l3.15139-.55567z"
-							fill="#FFD15C" fill-rule="evenodd" /></svg>
+							fill="#FFD15C" fill-rule="evenodd" />
+					</svg>
 
 				</div>
 			</div>
@@ -393,7 +406,7 @@
 								<div class="content">
 									<span class="time">2015 - 2017</span>
 									<h3 class="title">Junior College</h3>
-									
+
 									<p><u><b>Maharashtra State Board</b></u></p>
 									<p>K. J. Somaiya Junior College Of Arts & Commerce
 									</p>
@@ -405,7 +418,7 @@
 								<div class="content">
 									<span class="time">2004 - 2015</span>
 									<h3 class="title">School</h3>
-									
+
 									<p><u><b>Maharashtra State Board</b></u></p>
 									<p>B. S. M's English Medium School
 									</p>
@@ -426,7 +439,23 @@
 
 		</section>
 
-		
+		<!-- section experience -->
+		<section id="experience">
+
+			<div class="container">
+
+				<!-- section title -->
+				<h2 class="section-title wow fadeInUp">Portfolio</h2>
+
+				<div class="spacer" data-height="60"></div>
+				<div class="container box flex" id="box">
+				</div>
+				<div id="myModal" class="modal">
+					<img class="modal-content" id="imageModal">
+				</div>
+			</div>
+
+		</section>
 
 		<!-- section contact -->
 		<section id="contact">
@@ -514,29 +543,34 @@
 
 	<!-- SCRIPTS -->
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
+	<!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-analytics.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-analytics.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
 
-<script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyCKg4byN3t3YTVGOYGZ4xkzSCBAkiQK-XI",
-    authDomain: "om-thakkar.firebaseapp.com",
-    databaseURL: "https://om-thakkar.firebaseio.com",
-    projectId: "om-thakkar",
-    storageBucket: "om-thakkar.appspot.com",
-    messagingSenderId: "361713121302",
-    appId: "1:361713121302:web:c2f7dd274abc81d2",
-    measurementId: "G-F53L4DB815"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-</script>
+	<script>
+		// Your web app's Firebase configuration
+		var firebaseConfig = {
+			apiKey: "AIzaSyCKg4byN3t3YTVGOYGZ4xkzSCBAkiQK-XI",
+			authDomain: "om-thakkar.firebaseapp.com",
+			databaseURL: "https://om-thakkar.firebaseio.com",
+			projectId: "om-thakkar",
+			storageBucket: "om-thakkar.appspot.com",
+			messagingSenderId: "361713121302",
+			appId: "1:361713121302:web:c2f7dd274abc81d2",
+			measurementId: "G-F53L4DB815"
+		};
+		// Initialize Firebase
+		firebase.initializeApp(firebaseConfig);
+		firebase.analytics();
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/appwrite@10.1.0" />
+	<script>
+
+	</script>
 	<script src="js/jquery-1.12.3.min.js"></script>
 	<script src="js/jquery.easing.min.js"></script>
 	<script src="js/jquery.waypoints.min.js"></script>
@@ -546,8 +580,10 @@
 	<script src="js/wow.min.js"></script>
 	<script src="js/morphext.min.js"></script>
 	<script src="js/parallax.min.js"></script>
-	<script src="js/custom.min.js"></script>
 
+	<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+	<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+	<script src="js/custom.min.js"></script>
 </body>
 
 </html>
